syntax = "proto3";

package chord;

import "github.com/hexablock/go-chord/coordinate/structs.proto";

service chord {
    rpc ListVnodesServe(StringParam) returns (VnodeList) {}
    rpc PingServe(VnodePair) returns (Response) {}
    rpc NotifyServe(VnodePair) returns (VnodeList) {}
    rpc GetPredecessorServe(Vnode) returns (Vnode) {}
    rpc FindSuccessorsServe(FindSuccReq) returns (VnodeList) {}
    rpc ClearPredecessorServe(VnodePair) returns (Response) {}
    rpc SkipSuccessorServe(VnodePair) returns (Response) {}
}

message Vnode {
    bytes id = 1;
    string host = 2;
    bytes meta = 3;
}

// Generic response
message Response {
    coordinate.Coordinate Coordinate = 1;
    bool Ok = 2;
}

message VnodeList {
    repeated Vnode vnodes = 1;
}

message FindSuccReq {
    Vnode VN = 1;
    int32 count = 2;
    bytes key = 3;
}

message StringParam {
    string value = 1;
}

message VnodePair {
    Vnode target = 1;
    Vnode self = 2;
}
